sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:7: error: not found: value i
                   i=0
                   ^AlgCombSort:8: error: not found: value i
                   while (i+ecart < lgr)
                          ^AlgCombSort:8: error: not found: value lgr
                   while (i+ecart < lgr)
                                    ^AlgCombSort:9: error: not found: value i
                   {if (plusPetitQue(i+ecart,i))
                                     ^AlgCombSort:9: error: not found: value i
                   {if (plusPetitQue(i+ecart,i))
                                             ^AlgCombSort:10: error: not found: value i
                        {echange(i+ecart,ecart)
                                 ^AlgCombSort:12: error: not found: value i
                   i+=1}
                   ^